--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-             Я сделал натюрморт.
+             Я сделал бункер(компьютерный центр бункера) для спасения в случае ядерной войны или эпидемии и натюрморт.
 
 
 
@@ -150,7 +150,7 @@
 
 
   
-      Сделан что-бы пережить какую-либо эпидемию или войну (компьютерный центр бункера)
+      Сделан чтобы пережить какуюлибо эпидемию или войну (компьютерный центр бункера)
 
 
 
@@ -175,14 +175,14 @@
     <div class="carousel-item green white-text" href="#two!"><div class="title-container"><h2>
 
 
-      Натюрморт
+       Небольшой натюрморт.
 
     
     </h2><p class="white-text">
 
 
   
-      На рендере натюрморт с изображёнными на нём продуктами, лампой, кухонными пренадлежностями и коробкой
+      На рендере натюрморт с изображёнными на нём продуктами, лампой, кухонными пренадлежностями и коробкой.
 
 
 
