--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
   
-      Сделан чтобы пережить какуюлибо эпидемию или войну (компьютерный центр бункера)
+      Сделан чтобы пережить какую-либо эпидемию или войну (компьютерный центр бункера)
 
 
 
