--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
 
 
   
-      Сделан чтобы пережить какую-либо эпидемию или войну (компьютерный центр бункера)
-
+      Сделан чтобы пережить какую-нибудь эпидемию или войну (компьютерный центр бункера).
 
 
     <!-- Тут просто пишите название картинки когда загрузите ее -->
